tests/errors/undefined_method.orus
struct Foo {}
fn main() {
let f: Foo = Foo{}
f.bar()
}
